# strict-containers

./: .gitignore  .gitmodules  cabal.haskell-ci  cabal.project
.github/workflows/: haskell-ci.yml
strict-containers/: .gitignore  .quiltrc  CHANGELOG.md  edit-patch.sh  freeze-patch.sh  regen.sh  strict-containers.cabal  update-patches-from-git.sh
strict-containers-lens/: CHANGELOG.md  strict-containers-lens.cabal
strict-containers-lens/src/Data/Strict/Containers/: Lens.hs
strict-containers-lens/src/Data/Strict/HashMap/: Lens.hs
strict-containers-lens/src/Data/Strict/IntMap/: Lens.hs
strict-containers-lens/src/Data/Strict/Map/: Lens.hs
strict-containers-lens/src/Data/Strict/Sequence/: Lens.hs
strict-containers-lens/src/Data/Strict/Vector/: Lens.hs
strict-containers-serialise/: CHANGELOG.md  strict-containers-serialise.cabal
strict-containers-serialise/src/Data/Strict/Containers/: Serialise.hs
strict-containers-tests/: StrictTests.hs  strict-containers-tests.cabal
strict-containers/patches/: HashMap.patch  IntMap.patch  Map.patch  Sequence.patch  Vector.patch  tests.patch
strict-containers/src/Data/Strict/: HashMap.hs  HashSet.hs  IntMap.hs  IntSet.hs  Map.hs  Sequence.hs  Set.hs  Vector.hs
strict-containers/src/Data/Strict/ContainersUtils/Autogen/: BitQueue.hs  BitUtil.hs  Coercions.hs  Prelude.hs  PtrEquality.hs  State.hs  StrictMaybe.hs  TypeError.hs
strict-containers/src/Data/Strict/HashMap/: Internal.hs
strict-containers/src/Data/Strict/HashMap/Autogen/: Internal.hs  Strict.hs
strict-containers/src/Data/Strict/HashMap/Autogen/Internal/: Array.hs  Debug.hs  List.hs  Strict.hs
strict-containers/src/Data/Strict/IntMap/: Internal.hs
strict-containers/src/Data/Strict/IntMap/Autogen/: Internal.hs  Strict.hs
strict-containers/src/Data/Strict/IntMap/Autogen/Internal/: Debug.hs  DeprecatedDebug.hs
strict-containers/src/Data/Strict/IntMap/Autogen/Merge/: Strict.hs
strict-containers/src/Data/Strict/IntMap/Autogen/Strict/: Internal.hs
strict-containers/src/Data/Strict/Map/: Internal.hs
strict-containers/src/Data/Strict/Map/Autogen/: Internal.hs  Strict.hs
strict-containers/src/Data/Strict/Map/Autogen/Internal/: Debug.hs  DeprecatedShowTree.hs
strict-containers/src/Data/Strict/Map/Autogen/Merge/: Strict.hs
strict-containers/src/Data/Strict/Map/Autogen/Strict/: Internal.hs
strict-containers/src/Data/Strict/Sequence/: Autogen.hs  Internal.hs
strict-containers/src/Data/Strict/Sequence/Autogen/: Internal.hs
strict-containers/src/Data/Strict/Vector/: Autogen.hs  Internal.hs
strict-containers/src/Data/Strict/Vector/Autogen/: Mutable.hs
strict-containers/src/Data/Strict/Vector/Autogen/Internal/: Check.hs
strict-containers/tests/: HashMapLazy.hs  HashMapProperties.hs  IntMapValidity.hs  Utilities.hs  intmap-properties.hs  intmap-strictness.hs  map-properties.hs  map-strictness.hs  seq-properties.hs
strict-containers/tests/Tests/: Move.hs  Vector.hs
strict-containers/tests/Tests/Vector/: Boxed.hs  UnitTests.hs
