Name:           strict-containers-tests
Version:        0.2
Synopsis:       Strict containers - test suite
Category:       Data, Data Structures, Tests
Description:    Test suite for @strict-containers@.
License:        BSD3
License-File:   LICENSE
Maintainer:     Ximin Luo <infinity0@pwned.gg>
Copyright:      (c) 2021 by Ximin Luo
Homepage:       https://github.com/haskellari/strict-containers
Cabal-Version: >= 1.10
Build-type:     Simple
tested-with:
  GHC ==8.6.5
   || ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.4
   || ==9.4.2

test-suite strictness-tests
  default-language: Haskell2010
  hs-source-dirs:   .
  main-is:          StrictTests.hs
  type:             exitcode-stdio-1.0
  build-depends:
      strict-containers
    , strict-containers-lens
    , strict-containers-serialise
    , base                  >= 4.6      && <5
    , binary                >= 0.8.4.1  && < 0.9
    , binary-instances      >= 1        && < 2
    , containers            >= 0.6.6    && < 0.8
    , lens                  >= 4.19     && < 6
    , unordered-containers  >= 0.2.19.1 && < 0.3
    , serialise             >= 0.2.3.0  && < 0.3
    , strict                >= 0.4      && < 0.6
    , vector                >= 0.13.0.0 && < 0.14

  build-depends:
      ghc-heap
    , HUnit
    , QuickCheck                  >=2.7.1
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , transformers
