Name:           strict-containers
Version:        0.1
Synopsis:       Strict containers.
Category:       Data, Data Structures
Description:
  This package provides strict versions of some standard Haskell containers -
  including 'Sequence', 'Map' and 'HashMap'.
  .
  The reasoning is the same as that for our @strict@ package - though some
  containers already define strict /operations/ that force their inputs, the
  underlying data type is shared between the lazy and strict variants, i.e. by
  default lazy. In particular, instances are defined lazily on the common type,
  meaning that external utilities such as @lens@, @optics@, and deserialisation
  instances e.g. for @binary@ and @serialise@, all work lazily and there is not
  even the option to go strict.
  .
  This package defines separate data types, to avoid these problems. Instances
  can then be defined on these fully-strict data types.
  .
  To be clear, the "strict" vs "lazy" discussion refers to the values of a map
  or the elements of a sequence. The standard variants of these data structures
  that can be lazy-or-strict are already always-strict in their keys (for maps)
  and lengths (for sequences) respectively. This is also why we don't define
  strict variants of sets here, since the standard variants are already strict
  in their elements.
  .
  Note: generally, instances for strict containers violate their respective
  laws in the presence of bottom (undefined, error, infinite-loop). In the
  absence of bottom, laws are preserved.
  .
  This library mirrors the API of the standard lazy-or-strict variants in
  @containers@ and @unordered-containers@, including methods and fundamental
  instances. Additional instances are defined in other packages.
License:        BSD3
License-File:   LICENSE
Maintainer:     Ximin Luo <infinity0@pwned.gg>
Copyright:      (c) 2021 by Ximin Luo
Homepage:       https://github.com/haskellari/strict-containers
Cabal-Version: >= 1.10
Build-type:     Simple
extra-source-files:
    CHANGELOG.md
    -- generated list for includes
    -- DO NOT EDIT below, AUTOGEN includes
    include/containers.h
    -- DO NOT EDIT above, AUTOGEN includes

tested-with:
  GHC ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.3
   || ==8.10.4
   || ==9.0.1

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall

  build-depends:
      base                  >= 4.5.0.0  && < 5
    , array                 >= 0.4.0.0
    , containers            >= 0.5.9.2  && < 0.7
    , deepseq               >= 1.2      && < 1.5
    , hashable              >= 1.2.7.0  && < 1.4
    , unordered-containers  >= 0.2      && < 0.3
    , strict                >= 0.4      && < 0.5

  exposed-modules:
    Data.Strict.HashMap
    Data.Strict.HashMap.Internal
    -- generated list for HashMap
    -- DO NOT EDIT below, AUTOGEN HashMap
    Data.Strict.HashMap.Autogen.Strict
    Data.Strict.HashMap.Autogen.Internal
    Data.Strict.HashMap.Autogen.Internal.Array
    Data.Strict.HashMap.Autogen.Internal.Strict
    Data.Strict.HashMap.Autogen.Internal.List
    Data.Strict.HashMap.Autogen.Internal.Unsafe
    -- DO NOT EDIT above, AUTOGEN HashMap
    Data.Strict.Map
    Data.Strict.Map.Internal
    -- generated list for Map
    -- DO NOT EDIT below, AUTOGEN Map
    Data.Strict.Map.Autogen.Strict
    Data.Strict.Map.Autogen.Internal
    Data.Strict.Map.Autogen.Merge.Strict
    Data.Strict.Map.Autogen.Strict.Internal
    Data.Strict.Map.Autogen.Internal.Debug
    Data.Strict.Map.Autogen.Internal.DeprecatedShowTree
    -- DO NOT EDIT above, AUTOGEN Map
    Data.Strict.Sequence
    Data.Strict.Sequence.Internal
    -- generated list for Sequence
    -- DO NOT EDIT below, AUTOGEN Sequence
    Data.Strict.Sequence.Autogen
    Data.Strict.Sequence.Autogen.Internal
    Data.Strict.Sequence.Autogen.Internal.Sorting
    -- DO NOT EDIT above, AUTOGEN Sequence
    -- generated list for ContainersUtils
    -- DO NOT EDIT below, AUTOGEN ContainersUtils
    Data.Strict.ContainersUtils.Autogen.Coercions
    Data.Strict.ContainersUtils.Autogen.BitUtil
    Data.Strict.ContainersUtils.Autogen.StrictPair
    Data.Strict.ContainersUtils.Autogen.StrictMaybe
    Data.Strict.ContainersUtils.Autogen.PtrEquality
    Data.Strict.ContainersUtils.Autogen.State
    Data.Strict.ContainersUtils.Autogen.BitQueue
    Data.Strict.ContainersUtils.Autogen.TypeError
    -- DO NOT EDIT above, AUTOGEN ContainersUtils

  include-dirs: include

-- generated list for tests
-- DO NOT EDIT below, AUTOGEN tests
-- DO NOT EDIT above, AUTOGEN tests
